--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   ],
   "scripts": {
     "test": "grunt test",
-    "postinstall": "bower install && ln -sf ./node_modules/grunt-cli/bin/grunt ./grunt && ./node_modules/protractor/bin/webdriver-manager update && ./grunt build"
+    "postinstall": "grunt build"
   },
   "repository": {
     "type": "git",
